--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
             <objects>
                 <viewController storyboardIdentifier="QuoteViewController" title="Quote" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HVh-JB-716" customClass="QuoteViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sKI-Rw-wCv">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3b-6O-QPG">
@@ -22,7 +22,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bdn-Ac-I0d">
-
                                 <rect key="frame" x="0.0" y="56" width="414" height="503"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wsw-lh-ZGQ">
@@ -59,6 +58,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="Bdn-Ac-I0d" id="t92-6x-KJc"/>
+                        <outlet property="trackingBtn" destination="Wsw-lh-ZGQ" id="wyr-Tu-EYo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s9G-LE-z8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -176,7 +176,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="nwo-lf-RM9"/>
                     <connections>
+                        <outlet property="cancelBtn" destination="Qzr-Fb-IOl" id="4n7-94-AU1"/>
                         <outlet property="commentTextView" destination="sJN-7d-BaR" id="ftS-pr-3jO"/>
+                        <outlet property="saveBtn" destination="aqC-uo-jPu" id="XQe-zz-GoV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eLJ-Kt-veN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -546,7 +548,9 @@
                         <viewLayoutGuide key="safeArea" id="bL8-t4-gm9"/>
                     </view>
                     <connections>
+                        <outlet property="clearTxtBtn" destination="Efv-t7-XIv" id="nkO-R0-aVk"/>
                         <outlet property="commentTextView" destination="WRb-h9-goa" id="7ci-hX-36N"/>
+                        <outlet property="updateBtn" destination="9f8-oV-4Kf" id="3VV-0W-i3Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oHP-9Y-w5V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -561,7 +565,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a theme:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kiJ-Fv-Z5h">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a theme color:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kiJ-Fv-Z5h">
                                 <rect key="frame" x="100" y="188" width="214" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -569,28 +573,36 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ot-Zq-zft">
                                 <rect key="frame" x="80" y="314" width="80" height="40"/>
+                                <color key="backgroundColor" red="0.16078431372549018" green="0.15294117647058825" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Cnu-UP-uDJ"/>
                                     <constraint firstAttribute="width" constant="80" id="Mdu-Fx-uIA"/>
                                 </constraints>
-                                <state key="normal" title="Dark"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Dark">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="darkThemeBtnTapped:" destination="hOV-pd-Kgj" eventType="touchUpInside" id="t3d-3f-yPs"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s4l-if-aHu">
                                 <rect key="frame" x="254" y="314" width="80" height="40"/>
+                                <color key="backgroundColor" red="0.58823529409999997" green="0.92549019610000005" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="DTK-iL-MNL"/>
                                     <constraint firstAttribute="width" constant="80" id="nZ9-t8-Hif"/>
                                 </constraints>
-                                <state key="normal" title="White"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Light">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="whiteThemeBtnTapped:" destination="hOV-pd-Kgj" eventType="touchUpInside" id="5De-ab-m5b"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="s4l-if-aHu" firstAttribute="top" secondItem="kiJ-Fv-Z5h" secondAttribute="bottom" constant="105" id="1R8-Lt-Jrm"/>
                             <constraint firstItem="kiJ-Fv-Z5h" firstAttribute="top" secondItem="Dfw-Nn-vFK" secondAttribute="top" constant="100" id="7hw-E2-0O5"/>
@@ -603,6 +615,10 @@
                         <viewLayoutGuide key="safeArea" id="Dfw-Nn-vFK"/>
                     </view>
                     <navigationItem key="navigationItem" title="Select Theme" id="DeC-ag-dRl"/>
+                    <connections>
+                        <outlet property="darkThemeBtn" destination="6ot-Zq-zft" id="lhk-Z8-Ezn"/>
+                        <outlet property="lightThemeBtn" destination="s4l-if-aHu" id="GSP-FN-I2E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qgB-2q-SSf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -698,6 +714,6 @@
         <image name="tray.full.fill" catalog="system" width="64" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VRb-eU-FO7"/>
+        <segue reference="rET-Cg-7CN"/>
     </inferredMetricsTieBreakers>
 </document>
